test/classes/deitz/inherit/test_inherit_error1.good
Error: Cyclic class hierarchy detected (test_inherit_error1.chpl:1)
